added german text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 					<div class="inner cover">
 						<h1 class="cover-heading">Under Construction.</h1>
-						<p class="lead">The website you are looking for is currently under construction. Please stand by.</p>
+						<p class="lead">Diese Webseite wird gerade umgebaut und ist daher nicht verfügbar.</p>
 					</div>
 
 					<div class="mastfoot">
